// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`version basic version 1`] = `
@prisma/cli          : 2.11.0-dev.20
@prisma/client       : Not found
Current platform     : TEST_PLATFORM
Query Engine         : query-engine 5d491261d382a2a5ffdc71de17072b0e409f1cc1 
Migration Engine     : migration-engine-cli 5d491261d382a2a5ffdc71de17072b0e409f1cc1 
Introspection Engine : introspection-core 5d491261d382a2a5ffdc71de17072b0e409f1cc1 
Format Binary        : prisma-fmt 5d491261d382a2a5ffdc71de17072b0e409f1cc1 
Studio               : 0.332.0
`;

exports[`version version with custom binaries 1`] = `
@prisma/cli          : 2.11.0-dev.20
@prisma/client       : Not found
Current platform     : TEST_PLATFORM
Query Engine         : query-engine 58369335532e47bdcec77a2f1e7c1fb83a463918 
Migration Engine     : migration-engine-cli 58369335532e47bdcec77a2f1e7c1fb83a463918 
Introspection Engine : introspection-core 58369335532e47bdcec77a2f1e7c1fb83a463918 
Format Binary        : prisma-fmt 58369335532e47bdcec77a2f1e7c1fb83a463918 
Studio               : 0.332.0
`;
